# Rust---HTML-templating-tool

./: .env  Cargo.toml  README.md  teste.html
.output/: file2.js  teste.js
.output/subFolder/: comp.js
components/: file2.html  teste.html  teste22.html
components/subFolder/: comp.html
src/: _main.rs  main.rs
src/templating/: mod.rs
src/templating/utils/: io.rs  regex.rs  transpile.rs
src/utils/: transpile.rs
templates/: component.js
web/: README.md  index.html  pnpm-lock.yaml
web/components/: login-form.html  modal.html
web/src/: component.js  main.ts  reactive-framework.ts
web/src/components/: login-form.js  modal.js  reactive-framework.ts  teste.js
